--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Details.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Details.cshtml
@@ -185,6 +185,7 @@
                                             <a href="@Url.Action("Delete","LopHoc", new { id = lophoc.LopHocId })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa lớp học này?');"><i class="fa fa-trash"></i></a>
                                         </td>
                                     </tr>
+                                    stt++;
                                 }
                             </tbody>
                         </table>
