--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
@@ -1,12 +1,10 @@
 ﻿@model List<QuanLyThongTinDaoTao.Models.LopHoc>
 @using QuanLyThongTinDaoTao.Models;
 
-@{ int stt = 1; }
 @foreach (var lophoc in Model)
 {
     <tr class="text-center">
         <td><input type="checkbox" class="check-item" value="@lophoc.LopHocId" /></td>
-        <td>@stt</td>
         <td>@lophoc.MaLopHoc</td>
         <td>@lophoc.TenLopHoc</td>
         <td>@(lophoc.KhoaHoc != null ? lophoc.KhoaHoc.TenKhoaHoc : "Chưa có")</td>
@@ -52,12 +50,11 @@
             <a href="@Url.Action("Delete", new { id = lophoc.LopHocId })" class="btn btn-danger btn-sm m-2" onclick="return confirm('Bạn có chắc chắn muốn xóa lớp học này?');">
                 <i class="fas fa-trash-alt"></i> Xóa
             </a>
-            <a href="@Url.Action("DanhSachHocVien", new { id = lophoc.LopHocId })" class="btn btn-danger btn-sm m-2">
+            <a href="@Url.Action("DanhSachHocVien", new { id = lophoc.LopHocId })" class="btn btn-success btn-sm m-2">
                 Danh Sách Học Viên
             </a>
         </td>
     </tr>
-    stt++;
 }
 
 <script>
