--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -30,10 +30,12 @@
     <title>Trung Tâm Đào Tạo</title>
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="~/Areas/Admin/Asset/css/styles.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </head>
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-success">
@@ -159,7 +161,10 @@
                             <a href="@Url.Action("Index", "DiemDanhGiangVien")" class="nav-item nav-link">
                                 <i class="fas fa-check-circle me-2"></i>Điểm danh Giảng Viên
                             </a>
-                        
+                            <a href="@Url.Action("BaoCaoLopHoc", "ThongKe")" class="nav-item nav-link">
+                                <i class="fas fa-check-circle me-2"></i>Thống kê lớp học
+                            </a>
+
                         }
 
 
@@ -175,7 +180,7 @@
 
                         <div class="sb-sidenav-footer">
                             @*<div class="small">Logged in as:</div>
-                                Start Bootstrap*@
+            Start Bootstrap*@
                         </div>
                     </div>
                 </div>
